2005-04-11 10:25  antirez

	* ChangeLog, jim.c, jimsh.c: Fixes for this two bugs:

	  (1) jim.c   Jim_FormatString()       char array spec[] is defined
	  as having two elements but at the 'default:' case of the switch
	  statement an assignment is made to the third element

	  (2) jimsh.c  JimGetExePath()	     After the call of strrchr()
	  the value of p could be NULL in the case that argv[0] is just
	  plain "jim". The next line should have a test for NULL added to
	  avoid dereferencing the NULL pointer.  (This is the cause of a
	  Bus Error on Mac OS X.)

	  Many thanks to Colin McPhail for reporting this two problems.

2005-04-10 19:04  chi

	* jim.c, jimsh.c: Rework of the [scan] command finished. It does
	  not any longer use sscanf for scanning purposes, only for parsing
	  within SetScanFmtFromAny. We could get rid of it there too, if
	  necessary.

	  It pass all tests on all platforms I had access to (mainly Linux,
	  Solaris, FreeBSD, MacOS X). But I am confident, that it will pass
	  on the others as well.

	  A small new introduced C99-ism was fixed in jimsh.c as well.

2005-04-10 11:51  antirez

	* ChangeLog, jim.c, jim.h: Fix for [return -code eval]

2005-04-09 14:57  antirez

	* ChangeLog, jim.c, jim.h: Experimental verison of JIM_EVAL retcode
	  in order to implement what RHS proposed in the Wiki for tail
	  recursion:

	  return -code eval [list proc $a $b ...]

	  I'm not sure I'll take this, but it needs to be inside for some
	  time in order to experiment and evaluate it I guess.

2005-04-09 10:23  antirez

	* ChangeLog, TODO, jim.c: TODO updated, spurious free changed into
	  Jim_Free().

2005-04-08 16:07  patthoyts

	* jim-win32.c: Do not add cursorinfo if build target cannot cope.

2005-04-08 16:06  patthoyts

	* jim.c, jimsh.c: Fix win32 build

2005-04-07 09:27  antirez

	* ChangeLog, jimsh.c: Fixed a typo that prevented compilation with
	  JIM_ANSIC

2005-04-07 08:52  antirez

	* ChangeLog, jim.c: The ** expr operator, thanks to Richard